fix: resolve layout bug with lists
the resume page made a change to unstyled lists to allow an icon

this caused an issue with lists that did not sure icons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -272,12 +272,12 @@ ul.unstyled {
   padding: 0;
 }
 
-ul.unstyled li {
+li.flexed {
   display: flex;
   align-items: center;
 }
 
-ul.unstyled li > *:first-child {
+li.flexed > *:first-child {
   margin-right: 0.4rem;
 }
 
